[package]
edition = "2021"
name = "playground"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
futures = "0.3"
rmp-serde = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
signalrs-core = {path = "../signalrs-core"}
signalrs-error = {path = "../signalrs-error"}
tokio = {version = "1", features = ["full"]}
