[package]
name = "signalrs-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
signalrs-error = { path = "../signalrs-error" }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
