[package]
edition = "2018"
name = "signalrs-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rmp-serde = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
signalrs-error = {path = "../signalrs-error"}
pin-project = "1"
