[package]
name = "client-integration-tests"
description = "A dedicated package with client tests to run against real server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signalrs-client = { version = "0.1.1", path = "../signalrs-client" }

[dev-dependencies]
anyhow = "=1.0.66"
async-stream = "0.3"
rstest = "0.15"
tokio = {version = "1", features = ["full"]}
