[package]
edition = "2021"
name = "playground"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-mutex = {version = "1.4"}
async-stream = "0.3"
async-trait = "0.1.51"
axum = {version = "0", features = ["ws"]}
flume = {version = "0.10"}
futures = "0.3"
httparse = "1"
rmp-serde = "1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
signalrs-core = {path = "../signalrs-core"}
signalrs-error = {path = "../signalrs-error"}
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.17"
tower-http = {version = "0", features = ["cors", "fs", "trace"]}
tracing-subscriber = "0"
