[package]
edition = "2021"
name = "playground"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
async-trait = "0.1.51"
axum = {version = "0", features = ["ws"]}
flume = {version = "0.10"}
futures = "0.3"
httparse = "1"
log = "0.4.17"
rmp-serde = "1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
signalrs = {path = "../signalrs"}
signalrs-axum = {path = "../signalrs-axum"}
simple_logger = {version = "2.3.0"}
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.17"
tower-http = {version = "0", features = ["cors", "fs", "trace"]}
tracing-subscriber = "0"
