[package]
name = "signalrs-client"
version = "0.1.1"
authors = ["Radosław Kot"]
edition = "2021"
license = "MIT"
description = "SignalR client for Rust"
readme = "../../README.md"
repository = "https://github.com/szarykott/signalrs"
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tokio-rt = ["tokio", "tokio-tungstenite"]
async-std-rt = ["async-std", "async-tungstenite"]

[dependencies]
flume = "0.10.13"
futures = "0.3"
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
signalrs-derive = { version = "0.1.0" }
thiserror = "1.0.31"
tokio = {version = "1", features = ["full"], optional = true}
tokio-tungstenite = {version = "0.17", features = ["native-tls", "rustls"], optional = true}
async-std = { version = "1.12.0", optional = true }
async-tungstenite = { git = "https://github.com/brandonros/async-tungstenite.git", rev = "b383ac26694e770be42cad0c8d67b4d21947d34c", features = ["async-native-tls", "async-std-runtime"], optional = true }
tracing = "0.1"
[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.1"

[dev-dependencies]
anyhow = "1.0.66"
async-stream = "0.3"
rstest = "0.15"
tracing-subscriber = "0.3.16"
