[package]
name = "signalrs-derive"
version = "0.1.0"
authors = ["Radosław Kot"]
edition = "2021"
license = "MIT"
description = "Derive macros for SignalR client for Rust"
readme = "../../README.md"
repository = "https://github.com/szarykott/signalrs"
categories = ["network-programming"]

[lib]
proc-macro=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full"] }
