[package]
edition = "2018"
name = "signalrs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
flume = "0.10.13"
futures = "0.3"
log = "0.4.17"
pin-project = "1"
rmp-serde = "1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0.31"
tokio = {version = "1", features = ["full"]}
tokio-util = "0.7.3"
reqwest = "0.11"
tokio-tungstenite = { version = "0.17", features = ["rustls"]  }
[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.1"

[dev-dependencies]
async-stream = "0.3"
rstest = "0.15"
simple_logger = "2.2.0"
