[package]
edition = "2018"
name = "signalrs-tests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0"
futures = "0"
playground = {path = "../../playground"}
rstest = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
signalrs-core = {path = "../../signalrs-core"}
tokio = {version = "1", features = ["full"]}
async-stream = "0.3"

